# poetry-requirements

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  dependencies.txt  pyproject.toml  requirements.txt
.github/workflows/: coverage.yaml
poetry_requirements/: main.py
pre_commit_requirements/: main.py
tests/: test_main.py
