[tool.poetry]
name = "poetry-requirements"
version = "0.1.0"
description = "A pre-commit hook to automatically generate the projects requirement.txt file from poetry."
authors = ["arrrrrmin <info@dotarmin.info>"]

[tool.poetry.scripts]
poetry-requirements = "poetry-requirements.main:run"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
pytest = "^7.1.2"

[tool.black]
line-length = 90
target-version = ["py310"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
